// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-ack Renders \`extra-details-ack\` with date in previous month 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Ack</strong>
        <div>By : ack-author</div>
        <div>Date : 07/08/2013 19:00:00</div><div>Initiator : ack-initiator</div><div class=\\"c-extra-details__message\\">Comment : ack-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#9c27b0"
      icon="check"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-ack Renders \`extra-details-ack\` with date in previous month 2`] = `undefined`;

exports[`extra-details-ack Renders \`extra-details-ack\` with full ack 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Ack</strong>
        <div>By : ack-author</div>
        <div>Date : 6:00:00</div><div>Initiator : ack-initiator</div><div class=\\"c-extra-details__message\\">Comment : ack-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#9c27b0"
      icon="check"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-ack Renders \`extra-details-ack\` with full ack 2`] = `undefined`;

exports[`extra-details-ack Renders \`extra-details-ack\` without initiator 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Ack</strong>
        <div>By : ack-author</div>
        <div>Date : 6:00:00</div><div class=\\"c-extra-details__message\\">Comment : ack-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#9c27b0"
      icon="check"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-ack Renders \`extra-details-ack\` without initiator 2`] = `undefined`;

exports[`extra-details-ack Renders \`extra-details-ack\` without message 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Ack</strong>
        <div>By : ack-author</div>
        <div>Date : 6:00:00</div><div>Initiator : ack-initiator</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#9c27b0"
      icon="check"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-ack Renders \`extra-details-ack\` without message 2`] = `undefined`;
